--- a/src/pages/Instructors/Instructors.css
+++ b/src/pages/Instructors/Instructors.css
@@ -2,14 +2,15 @@
 .instructor-items{
    cursor: pointer;
    transition: all 0.5s;
+   box-shadow: 5px 5px 15px #888;
 }
 .instructor-items:hover{
     transform: translateY(-10px);
+    box-shadow: 5px -5px 15px #888;
 }
 .overlay{
     transition: all 0.6s;
 }
 .instructor-items:hover .overlay{
-    background-color: black;
-    opacity: 0.6;
+    bottom:0px;
 }
